# codemcp

./: .editorconfig  .gitignore  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  INSTALL.md  README.md  TODO.md  clean_temp_files.sh  codemcp.toml  codemcp.toml.example  deskaid.py  deskaid.toml  deskaid_server.py  git_message.py  install-deps.sh  make_scripts_executable.sh  prompt.txt  pyproject.toml  restore_original.py  run_format.sh  run_lint.sh  run_modified_tests.sh  run_single_test.sh  run_temp_tests.sh  run_test.sh  run_test_format.sh  run_tests.sh  run_trailing_whitespace_tests.sh  run_typecheck.sh  run_whitespace_tests.sh  synf.toml  temp_run_tests.sh  test_git_message.py
.cursor/rules/: expecttest.mdc
.github/workflows/: test.yml
codemcp/: __init__.py  __main__.py  access.py  agno.py  async_file_utils.py  code_command.py  common.py  config.py  file_utils.py  git.py  git_commit.py  git_core.py  git_message.py  git_parse_message.py  git_query.py  glob.py  hot_reload.py  hot_reload_entry.py  line_endings.py  main.py  mcp.py  multi_entry.py  regex.py  rules.py  shell.py  slash_commands.py  testing.py
codemcp/templates/: README.md
codemcp/templates/blank/: codemcp.toml
codemcp/templates/python/: README.md  codemcp.toml  pyproject.toml
codemcp/templates/python/__PACKAGE_NAME__/: __init__.py
codemcp/tools/: __init__.py  async_file_utils.py  chmod.py  chmod_exec.py  code_command.py  commit_utils.py  edit_file.py  file_utils.py  format.py  git_blame.py  git_diff.py  git_log.py  git_show.py  glob.py  grep.py  init_project.py  lint.py  ls.py  mv.py  read_file.py  rm.py  run_command.py  run_tests.py  think.py  user_prompt.py  write_file.py
deskaid/: __init__.py  __main__.py  common.py  config.py
deskaid/tools/: __init__.py  edit_file.py  grep.py  init_project.py  ls.py  read_file.py  write_file.py
e2e/: test_chmod.py  test_chmod_exec.py  test_commit_message_format.py  test_commutable_auto_commit.py  test_cursor_rules.py  test_directory_creation.py  test_disable_git_commit.py  test_edit_file.py  test_failure_script.py  test_format.py  test_formatter_no_command.py  test_git_amend.py  test_git_amend_whitespace.py  test_git_block_format.py  test_git_directory_error.py  test_git_helper.py  test_git_operations_disabled.py  test_git_query_file_path.py  test_git_reference_markers.py  test_git_tools.py  test_glob.py  test_grep.py  test_hot_reload_entry.py  test_init_command.py  test_init_project.py  test_init_project_chat_ref.py  test_init_project_no_commits.py  test_init_project_write_interaction.py  test_json_content_serialization.py  test_lint.py  test_list_tools.py  test_ls.py  test_mv.py  test_read_file.py  test_rm.py  test_run_command.py  test_run_command_output_limit.py  test_run_from_subdir.py  test_run_tests.py  test_security.py  (+6 more)
stubs/codemcp/: glob.pyi
stubs/editorconfig/: __init__.pyi
stubs/mcp_stubs/: ClientSession.pyi  __init__.pyi  types.pyi
stubs/mcp_stubs/client/: __init__.pyi  stdio.pyi
stubs/mcp_stubs/server/: __init__.pyi  fastmcp.pyi
stubs/tomli_stubs/: __init__.pyi
test/: __init__.py  test_access.py  test_directory_creation.py  test_e2e_edit_file.py  test_e2e_format.py  test_e2e_lint.py  test_e2e_list_tools.py  test_e2e_run_tests.py  test_e2e_security.py  test_e2e_write_file.py  test_edit_file.py  test_format.py  test_git_amend.py  test_grep.py  test_init_project.py  test_lint.py  test_list_tools.py  test_ls.py  test_mcp_e2e.py  test_read_file.py  test_read_file.py.bak  test_run_tests.py  test_write_file.py
test/e2e/: test_e2e_directory_creation.py  test_e2e_edit_file.py  test_e2e_format.py  test_e2e_init_project.py  test_e2e_lint.py  test_e2e_ls.py  test_e2e_read_file.py  test_e2e_run_tests.py  test_e2e_security.py  test_e2e_write_file.py
test/unit/: test_directory_creation.py  test_grep.py  test_init_project.py  test_lint.py  test_ls.py  test_run_command.py  test_run_tests.py  test_write_file.py
tests/: test_common.py  test_edit_file_string_matching.py  test_git_message.py  test_git_message_real_world.py  test_git_parse_message.py  test_glob.py  test_line_endings.py  test_rules.py  test_rules_with_glob.py  test_slash_commands.py  test_update_commit_message.py
