[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "__PROJECT_NAME__"
version = "0.1.0"
description = "Project description"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "mypy>=1.0.0",
    "black>=23.0.0",
    "isort>=5.0.0",
]
