[project]
name = "__PROJECT_NAME__"
version = "0.1.0"
description = "TODO: project description"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.optional-dependencies]
dev = [
    "pytest>=8.3.5",
    "ruff>=0.11.2",
]
