[project]
name = "__PROJECT_NAME__"
version = "0.1.0"
description = "TODO: project description"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "ruff>=0.11.2",
    "pytest-xdist>=3.6.1",
    "pyright>=1.1.350",
]

[tool.pytest.ini_options]
addopts = "-n auto --tb=native"

[tool.pyright]
# Pyright configuration with strict settings
include = ["__PACKAGE_NAME__"]
exclude = ["**/__pycache__", "dist"]
stubPath = "stubs"
venvPath = "."
venv = ".venv"
reportMissingImports = true
reportMissingTypeStubs = true
pythonVersion = "3.12"
pythonPlatform = "All"
typeCheckingMode = "strict"
reportUnknownMemberType = true
reportUnknownParameterType = true
reportUnknownVariableType = true
reportUnknownArgumentType = true
reportPrivateImportUsage = true
reportUntypedFunctionDecorator = true
reportFunctionMemberAccess = true
reportIncompatibleMethodOverride = true

[tool.ruff]
target-version = "py312"
